# Chatalyst

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  chatalyst-threat-model.md  pyproject.toml  security_best_practices_report.md
chatalyst/: __init__.py  app.py  tui_app.py
chatalyst/core/: __init__.py  browser.py  cache.py  chatgpt.py  cli.py  config.py  events.py  export.py  markdown_renderer.py  mcp_server.py  models.py  obsidian.py  plugins.py  privacy.py  processes.py  project_aliases.py  runtime.py  search.py  selectors.py  snippets.py  terminal.py  version.py
chatalyst/widgets/: __init__.py  bookmark_panel.py  chat_list.py  command_palette.py  conversation_view.py  message_input.py  notes_panel.py  obsidian_dialog.py  search_dialog.py  snippet_panel.py  status_bar.py
docs/: MCP.md  Plugins.md
plugins/obsidian_vault/: README.md  plugin.json  plugin.py  plugin_config.example.json
tests/: test_accounts.py  test_browser.py  test_cache.py  test_chatgpt.py  test_cli.py  test_mcp_server.py  test_obsidian_export.py  test_obsidian_plugin.py  test_plugins.py  test_privacy.py  test_processes.py  test_runtime_lock.py  test_terminal.py  test_tui_obsidian.py  test_widgets.py
