[project]
name = "chatalyst"
version = "0.1.0"
description = "Terminal-first ChatGPT knowledge workspace using a real authenticated browser session."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "chatgpt-tui contributors" }]
dependencies = [
  "loguru>=0.7.2",
  "markdown-it-py[plugins]>=3.0.0",
  "playwright>=1.52.0",
  "pydantic>=2.10.0",
  "pygments>=2.18.0",
  "rapidfuzz>=3.9.0",
  "rich>=13.9.0",
  "textual>=0.89.0",
]

[project.scripts]
chatalyst = "chatalyst.app:main"
chatgpt-tui = "chatalyst.app:main"
chatalyst-mcp = "chatalyst.core.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
include = [
  "chatalyst/**/*.py",
]

[tool.hatch.build.targets.editable]
include = [
  "chatalyst/**/*.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
