[project]
name = "chatalyst"
version = "0.3.1"
description = "Terminal-first ChatGPT knowledge workspace using a real authenticated browser session."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "w00ch3a" }]
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
dependencies = [
  "loguru>=0.7.2",
  "markdown-it-py[plugins]>=3.0.0",
  "playwright>=1.52.0",
  "pydantic>=2.10.0",
  "pygments>=2.18.0",
  "rapidfuzz>=3.9.0",
  "rich>=13.9.0",
  "textual>=0.89.0",
]

[project.scripts]
chatalyst = "chatalyst.core.cli:main"
chatgpt-tui = "chatalyst.core.cli:main"
chatalyst-mcp = "chatalyst.core.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
include = [
  "CHANGELOG.md",
  "chatalyst/**/*.py",
  "plugins/**/*.json",
  "plugins/**/*.md",
  "plugins/**/*.py",
]

[tool.hatch.build.targets.editable]
include = [
  "CHANGELOG.md",
  "chatalyst/**/*.py",
  "plugins/**/*.json",
  "plugins/**/*.md",
  "plugins/**/*.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
